01/12/2024
 - Add custom model path
 - Update README